--- a/CustomerService/CustomerService/CustomerService.csproj
+++ b/CustomerService/CustomerService/CustomerService.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="NetCore.AutoRegisterDi" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
