Service updates and app publish profiles added for docker image creation

--- a/InventoryService/InventoryService/appsettings.json
+++ b/InventoryService/InventoryService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "InventoryConnection": "Server=.\\sqlexpress;Database=inventory-demo;Integrated Security=True"
+    "InventoryConnection": "Server=theoris.database.windows.net;User id=demo_user;Password=Start12345!;Database=inventory-demo;"
   },
   "Logging": {
     "LogLevel": {
