--- a/OrderService/OrderService/appsettings.json
+++ b/OrderService/OrderService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrdersConnection": "Server=.\\sqlexpress;Database=orders-demo;Integrated Security=True"
+    "OrdersConnection": "Server=theoris.database.windows.net;User id=demo_user;Password=Start12345!;Database=orders-demo;"
   },
   "Logging": {
     "LogLevel": {
