updating connection info

--- a/CustomerService/CustomerService/appsettings.json
+++ b/CustomerService/CustomerService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CustomerConnection": "Server=theoris.database.windows.net;User id=demo_user;Password=Start12345!;Database=customers-demo;"
+    "CustomerConnection": "{encryptedInformation}"
   },
   "Logging": {
     "LogLevel": {
